# bb2y2b

./: .env.example  .gitignore  Makefile  README.md  activate_env.sh  docker-compose.dev.yml  docker-compose.yml  init-db.sql  requirements.txt  start-dev.sh
.kiro/specs/bb2y2b-modernization/: design.md  requirements.md  tasks.md
bb2y2b-backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  init_db.py  pyproject.toml  requirements.txt
bb2y2b-backend/alembic/: env.py
bb2y2b-backend/alembic/versions/: 001_initial_migration.py
bb2y2b-backend/app/: __init__.py  main.py
bb2y2b-backend/app/api/v1/: api.py
bb2y2b-backend/app/api/v1/endpoints/: ai_providers.py  downloads.py  prompt_templates.py  spaces.py  system.py  tasks.py  videos.py
bb2y2b-backend/app/core/: database.py
bb2y2b-backend/app/models/: __init__.py  ai_analysis_log.py  ai_provider.py  prompt_template.py  space.py  system_config.py  task.py  video.py
bb2y2b-backend/app/schemas/: __init__.py  ai_provider.py  prompt_template.py  space.py  system_config.py  task.py  video.py
bb2y2b-backend/app/services/: ai_provider.py  bilibili.py  download.py  download_manager.py  prompt_template.py  space.py  system.py  task.py  video.py
bb2y2b-backend/scripts/: test_db.py
bb2y2b-vite-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
bb2y2b-vite-frontend/src/: App.tsx  index.css
bb2y2b-vite-frontend/src/components/downloads/: DownloadManager.tsx
bb2y2b-vite-frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
bb2y2b-vite-frontend/src/components/spaces/: SpaceForm.tsx  SpacesList.tsx
bb2y2b-vite-frontend/src/components/ui/: Button.tsx  Input.tsx  Modal.tsx
bb2y2b-vite-frontend/src/hooks/: useDownloads.ts  useSpaces.ts  useVideos.ts
bb2y2b-vite-frontend/src/lib/: api.ts  downloadsApi.ts  videosApi.ts
(+1 files in other folders)
